# mojo_arrow_sys

./: .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: build_and_publish.yml  test.yml
docs/: INSTALL.md
mojo_arrow_sys/: __init__.py  _version.py  mojo_arrow_sys.c
src/: __init__.py  _version.py  mojo_arrow_sys.c
tests/: test_mojo_arrow_sys.py
