[build-system]
requires = ["setuptools>=42", "wheel", "cibuildwheel>=2.13.1", "setuptools_scm>=8.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mojo_arrow_sys"
dynamic = ["version"]
description = "Python C extension for accessing Arrow C streams from Mojo"
authors = [{name = "Marius Seritan", email = "pypi@seritan.net"}]
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "ruff>=0.11.3",
]

[project.urls]
Homepage = "https://github.com/winding-lines/mojo_arrow_sys"
BugTracker = "https://github.com/winding-lines/mojo_arrow_sys/issues"

[tool.cibuildwheel]
build = "cp37-* cp38-* cp39-* cp310-* cp311-* cp312-*"
skip = "pp* *_i686 *_ppc64le *-musllinux*" 
archs = "auto64"

[tool.cibuildwheel.linux]
before-all = "yum install -y gcc"

[tool.cibuildwheel.macos]
archs = "x86_64 arm64"

[tool.setuptools_scm]
write_to = "mojo_arrow_sys/_version.py"
